# vex-v5-qemu

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml  simulate  start-qemu.sh
.devcontainer/: Dockerfile  devcontainer.json
client/: package.json  tsconfig.json  tsconfig.node.json
client-cli/: Cargo.toml
client/src-tauri/: Cargo.toml
client/src-tauri/src/: qemu.rs
client/src/lib/components/: Divider.svelte  NumberDisplay.svelte  Select.svelte  Switch.svelte  TabPanel.svelte  index.ts
client/src/lib/edges/: index.ts
client/src/lib/handles/: AdiPortHandle.svelte  DataHandle.svelte
client/src/lib/icons/: GenericSerial.svelte  LineTracker.svelte
client/src/lib/layout/: Sidebar.svelte
client/src/lib/nodes/: AdiNode.svelte  BatteryNode.svelte  BrainNode.svelte  LightSensorNode.svelte  ValueNode.svelte
client/src/styles/: app.css
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.svelte  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/resources/: kernel.elf
frontend/src-tauri/src/: lib.rs  protocol.rs  qemu.rs
frontend/src/lib/: Button.svelte  ControlsHeader.svelte  DevicesSidebar.svelte  Dialog.svelte  Display.svelte  DraggableDevice.svelte  Flow.svelte  Screen.svelte  SerialMonitor.svelte  Sidebar.svelte  Terminal.svelte  Uploader.svelte  drag.ts  payload.ts  session.ts  stores.ts
frontend/src/lib/icons/: ADI.svelte  AIVisionSensor.svelte  BumperSwitch.svelte  Controller.svelte  DistanceSensor.svelte  GPS.svelte  GPSSensor.svelte  LineTracker.svelte  Magnet.svelte  OpticalSensor.svelte  Potentiometer.svelte  RotationSensor.svelte  VisionSensor.svelte
frontend/src/lib/nodes/: AdiNode.svelte  BatteryNode.svelte  BrainNode.svelte  GpsNode.svelte
frontend/src/styles/: app.css  flow.css
host/: Cargo.toml  index.html  pnpm-lock.yaml
host-api/: Cargo.toml
host-api/src/: brain.rs  lib.rs  main.rs
host-api/src/peripherals/: mod.rs
host-cli/: Cargo.toml
host-cli/src/: main.rs
host/src/: App.svelte  brain.rs  connection.rs  main.rs  vite-env.d.ts
host/src-tauri/capabilities/: default.json
host/src-tauri/src/: lib.rs
host/src/lib/: Button.svelte  Flow.svelte  Sidebar.svelte  Terminal.svelte  Uploader.svelte  invoke.ts  session.ts  stores.ts
host/src/lib/actions/: index.ts
host/src/lib/components/: Button.svelte  Checkbox.svelte  DraggableDevice.svelte  Field.svelte  NodeBase.svelte  NumberInput.svelte  RadioGroup.svelte  Slider.svelte  TabPanel.svelte  Tabs.svelte  TextInput.svelte  index.ts
host/src/lib/edges/: AdiEdge.svelte  DataEdge.svelte  index.ts
host/src/lib/handles/: AdiPortHandle.svelte  DataHandle.svelte  SmartPortHandle.svelte  index.ts
host/src/lib/icons/: AIVisionSensor.svelte  Controller.svelte  LightSensor.svelte  Magnet.svelte  Motor.svelte  Potentiometer.svelte  RotationSensor.svelte  index.ts
host/src/lib/layout/: Display.svelte  Flow.svelte  Sidebar.svelte  Terminal.svelte  Uploader.svelte  index.ts
host/src/lib/nodes/: AdiNode.svelte  BatteryNode.svelte  BrainNode.svelte  DistanceNode.svelte  GpsNode.svelte  LightSensorNode.svelte  MathNode.svelte  TimeNode.svelte  ValueNode.svelte  index.ts
host/src/peripherals/: mod.rs
host/src/styles/: app.css  flow.css
kernel/: Cargo.toml  armv7a-vex-v5.json  build.rs
kernel/.cargo/: config.toml
kernel/example-programs/: README.md
kernel/example-programs/serial-echo/: Cargo.toml
kernel/example-programs/serial-echo/src/: main.rs
kernel/link/: kernel.ld  v5.ld
kernel/src/: allocator.rs  asm.rs  logger.rs  logging.rs  main.rs  panic.rs  peripherals.rs  protocol.rs  utils.rs  vectors.rs  vectors.s
kernel/src/drivers/: logging.rs  mod.rs  panic.rs  uart.rs
kernel/src/hardware/: gic.rs  mmu.rs  mod.rs  uart.rs
kernel/src/hardware/timers/: global.rs  private.rs  watchdog.rs
kernel/src/sdk/: abs_enc.rs  adi.rs  ai_vision.rs  arm.rs  battery.rs  controller.rs  device.rs  display.rs  distance.rs  file.rs  generic_radio.rs  generic_serial.rs  gps.rs  imu.rs  led.rs  light_tower.rs  magnet.rs  mod.rs  motor.rs  optical.rs  pneumatic.rs  range.rs  serial.rs  system.rs  task.rs  touch.rs  vision.rs
kernel/src/sync/: critical_section.rs  lazy.rs  once.rs
kernel/src/xil/: exception.rs  gic.rs  mod.rs  time.rs  timer.rs  uart.rs  usbps.rs  wdt.rs
node-graph/examples/: graph.toml  interpret.rs
node-graph/src/: ast.rs  interpreter.rs  lib.rs  parser.rs
pros/: LICENSE  Makefile  common.mk  compile_flags.txt
pros/include/pros/: error.h
pros/include/rtos/: FreeRTOS.h  StackMacros.h
pros/src/rtos/: task_notify_when_deleting.c
pros/src/system/: startup.c
pros/src/system/dev/: file_system_stubs.c
pros/src/tests/: segfault.c
pros/src/v5/: v5_controller.c  v5_core.c  v5_display.c  v5_stubs.c  v5_system.c
pros/src/v5/devices/: v5_devices.c  v5_imu.c  v5_motors.c  v5_rotation.c
protocol/: Cargo.toml
protocol/src/: code_signature.rs  controller.rs  display.rs  lib.rs  motor.rs
sdk-shim/: .gitignore  justfile  shim.ld  shim.rs
simulator/: Cargo.toml
simulator-host/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
simulator-host/src/: main.ts
simulator-host/src-tauri/: Cargo.toml  tauri.conf.json
simulator-host/src/lib/: App.svelte
simulator/client/: package.json
simulator/client-cli/: Cargo.toml
simulator/client-cli/src/: main.rs
simulator/client/src/: App.svelte
simulator/client/src-tauri/: Cargo.toml
simulator/client/src-tauri/src/: qemu.rs
simulator/client/src/lib/: stores.ts
simulator/display/: Cargo.toml
simulator/display/examples/: shapes.rs  text.rs
simulator/display/src/: lib.rs
simulator/host/src/: brain.rs  connection.rs  lib.rs
simulator/host/src/peripherals/: battery.rs  mod.rs
simulator/protocol/: Cargo.toml
simulator/protocol/src/: battery.rs  code_signature.rs  display.rs  distance_sensor.rs  geometry.rs  lib.rs  motor.rs
simulator/src/: main.rs  protocol.rs
tests/: pros.elf  vexcode.elf
(+12 files in other folders)
