[workspace]
members = [
    "./packages/host",
    "./packages/qplugin",
    "./packages/protocol",
    "./packages/client-cli",
    "./packages/client/src-tauri",
]
exclude = [
    "./packages/display", # broken for now
    "./packages/kernel", # makes rust-analyzer really slow
]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
missing_const_for_fn = "warn"
