[workspace]
members = [
    "./packages/host",
    "./packages/protocol",
    "./packages/client-cli",
    "./packages/client/src-tauri",
    "./packages/display",
    "packages/xtask",
]
exclude = [
    "./packages/kernel", # makes rust-analyzer really slow
]
resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
missing_const_for_fn = "warn"
