[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
missing_const_for_fn = "warn"

[lints]
workspace = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[dependencies]
heapless = "0.8.0"
# host_call = { path = "../host_call" }
lock_api = "0.4.12"
snafu = { version = "0.8.4", default-features = false, features = [
    "unstable-core-error",
    "rust_1_61",
] }
vex-sdk = "0.12.3"
critical-section = { version = "1.1.2", features = ["restore-state-bool"] }
printf-compat = { version = "0.1.1", default-features = false }
log = "0.4.22"
embedded-io = "0.6.1"
