[package]
name = "vex-v5-display-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
fimg = { version = "0.4.43", features = ["save"], default-features = false }
png = "0.17.13"
resource = "0.5.0"
vex-v5-qemu-protocol = { version = "0.0.1", path = "../protocol" }

[lints]
workspace = true
